# BlokusAI

./: .dockerignore  .gitignore  CLAUDE.md  COMPREHENSIVE_ANALYSIS.md  Dockerfile  LICENSE  README.md  RESEARCH_SURVEY_REPORT.md  TEST_FIX_SUMMARY.md  TEST_V2_PRELIMINARY_SUMMARY.md  VALUE_ONLY_EXPERIMENT_STATUS.md  analyze_profile.py  compare_profiles.py  docker-compose.yml  mcts_500sim_comparison.py  profile_training.py  pyproject.toml  quick_mcts_comparison.py  test_batched_training.py  test_move_gen_optimization.py  test_phase1_only.py  training_profile_baseline.stats
archive/experiments/reports/: DIAGNOSIS_REPORT.md
blokus_ai/: analyze_game.py  device.py  encode.py  engine.py  eval.py  gtp_bridge.py  mcts.py  net.py  pieces.py  replay_buffer.py  selfplay.py  state.py  train.py  train_medium.py  viz.py  wandb_logger.py
docs/: ARCHITECTURE_ROADMAP.md  BATCHED_MCTS_INTEGRATION.md  BATCHED_MCTS_ISSUE.md  BUGFIXES.md  COLAB_SETUP.md  GPU_TRAINING_FIX.md  MCTS_OPTIMIZATION_PLAN.md  MCTS_SIMULATION_FIX.md  MOVE_GEN_OPTIMIZATION_FAILURE.md  NETWORK_ARCHITECTURE_REVIEW.md  OPTIMIZATION_FAILURE_REPORT.md  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY_UPDATED.md  PARALLELIZATION.md  PENTOBI_BENCHMARK.md  PROFILING_GUIDE.md  PROFILING_RESULTS.md  PROGRESS.md  RESUME_TRAINING.md  ROADMAP.md  RUST_IMPLEMENTATION_PLAN.md  RUST_INTEGRATION.md  SESSION_SUMMARY.md  TRAINING_GUIDE.md  VISUALIZATION.md  blokus_ai_devlog.md
notebooks/: BlokusAI_Colab_Training.ipynb  README.md  train.ipynb
rust/: Cargo.toml  pyproject.toml
rust/src/: engine.rs  lib.rs  mcts.rs
scripts/: benchmark_is_legal.py  benchmark_legal_moves.py  benchmark_mcts.py  benchmark_mcts_batched.py  benchmark_network.py  benchmark_pentobi.py  benchmark_puct.py  benchmark_rust.py  benchmark_selfplay.py  check_gpu.py  debug_analyze.py  debug_legal_moves.py  debug_legal_moves_bug.py  debug_piece_reuse.py  debug_selfplay.py  demo_viz.py  monitor_training.sh  play_demo.py  resume_training.py  test_architecture.py  test_experiment_isolation.py  test_features_v2.py  test_mcts_rust.py  test_resume_integration.py  test_rust_integration.py  train_demo.py
tests/: test_batched_mcts.py  test_mcts.py  test_policy_optimization.py  test_replay_buffer.py  test_resume_training.py  test_selfplay.py  test_train.py  test_wandb_logger.py
